--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     --success: #10B981;
     --warning: #FBBF24;
     --error: #EF4444;
-    --background: #F9FAFB;
+    --background: none;
     --surface: #FFFFFF;
     --surface-solid: #FFFFFF;
     --text-primary: #111827;
